# leptos-csr-template

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
src/: css.rs  lib.rs  main.rs
src/pages/: mod.rs  not_found.rs
style/: output.css
