[package]
name = "{{project-name}}"
#name = "project-name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev-tracing"]
dev-tracing = ["tracing", "tracing-wasm"] # trunk serve --features dev-tracing

[dependencies]
leptos = { version = "0", features = ["csr", "serde"] }
leptos_meta = { version = "0", features = ["csr"] }
leptos_router = { version = "0", features = ["csr"] }

tracing = { version = "0", optional = true }
tracing-wasm = { version = "0", optional = true }

# dependencies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0" }
console_error_panic_hook = { version = "0" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"